Remove java.endorsed.dirs from argLine